<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main3Activity" >
    <!--tools:showIn="@layout/activity_main3">-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/activity_3"
        android:textSize="40sp"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity2btn"
        android:text="@string/activity2"
        android:onClick="onClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity4btn"
        android:text="Activity4"
        android:onClick="onClick"
        android:layout_marginLeft="100dp"/>
    <Button
        android:id="@+id/firstFragmentbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/first_fragment"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/secondFragmentbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@android:color/darker_gray"
        android:text="@string/second_fragment"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="150dp"
        android:background="@android:color/darker_gray"
        android:alpha="0.2"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>